--- a/package.json
+++ b/package.json
@@ -7,18 +7,26 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "react-devtool": "react-devtools"
   },
   "dependencies": {
     "@react-native-community/geolocation": "^3.0.4",
     "@react-navigation/native": "^6.1.2",
+    "@react-navigation/native-stack": "^6.9.8",
+    "install": "^0.13.0",
     "react": "18.1.0",
+    "react-devtools": "^4.27.1",
     "react-native": "0.70.6",
+    "react-native-countdown-circle-timer": "^3.1.0",
     "react-native-geocoding": "^0.5.0",
     "react-native-maps": "^1.3.2",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-size-matters": "^0.4.0",
+    "react-native-stopwatch-timer": "^0.0.21",
+    "react-native-svg": "^13.7.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
@@ -28,6 +36,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/react": "^18.0.21",
+    "@types/react-devtools": "^3.6.0",
     "@types/react-native": "^0.70.6",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
